# cookiecutter-python-package

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.package_name}}/: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  LICENSE.txt  README.md  mkdocs.yml  pyproject.toml
{{cookiecutter.package_name}}/.github/: CONTRIBUTING.md
{{cookiecutter.package_name}}/.github/workflows/: codeql-analysis.yml  docs.yml  publish-docs.yml  publish.yml  test.yml
{{cookiecutter.package_name}}/docs/: API.md  Api.md  development.md  index.md  usage.md
{{cookiecutter.package_name}}/scripts/: dev.py  format.sh  lint.sh  test.sh
{{cookiecutter.package_name}}/src/{{cookiecutter.module_name}}/: __init__.py  __main__.py  api.py  settings.py  version.py
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __main__.py
{{cookiecutter.package_name}}/tests/: __init__.py  dev.py  test_api.py  test_cli.py
{{cookiecutter.package_name}}/tests/resources/: settings.yml
{{cookiecutter.package_name}}/{{cookiecutter.module_name}}/: __main__.py  api.py
