[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
requires-python = ">=3.8"
name = "{{cookiecutter.package_name}}"
description = "{{cookiecutter.short_description}}"
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" },
]
maintainers = [
    { name = "{{cookiecutter.full_name}}", email = "{{cookiecutter.email}}" },
]
keywords = [
    "Python",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version"]

dependencies = [
    "requests",
    "PyYAML",{% if cookiecutter.command_line_interface|lower != "no" %}
    "typer >=0.6.0",{% endif %}
]

{% if cookiecutter.command_line_interface|lower != "no" %}
[project.scripts]
{{cookiecutter.package_name}} = "{{cookiecutter.module_name}}.__main__:cli"{% endif %}


[project.optional-dependencies]
test = [
    "pytest >=7.4.0",
    "pytest-cov >=3.0.0",
    "pre-commit",
    "mypy >=1.4.1",
    "pip-tools",
    "types-requests",
    "types-PyYAML",
]{% if cookiecutter.documentation_website|lower != "no" %}
doc = [
    "mkdocs >=1.4.2",
    "mkdocs-material >=8.2.7",
    "mkdocstrings[python] >=0.19.1",
    "mdx-include >=1.4.1",
    "mkdocs-markdownextradata-plugin >=0.2.5",
    "mkdocs-open-in-new-tab",
]{% endif %}


[project.urls]
Homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.package_name}}"
Documentation = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.package_name}}"
History = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.package_name}}/releases"
Tracker = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.package_name}}/issues"
Source = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.package_name}}"


# ENVIRONMENTS AND SCRIPTS
[tool.hatch.envs.default]
features = [
    "test",{% if cookiecutter.documentation_website|lower != "no" %}
    "doc",{% endif %}
]
post-install-commands = [
    "pre-commit install",
]

[tool.hatch.envs.default.scripts]
dev = "python tests/dev.py {args}"
fmt = [
    "pre-commit run --all --all-files",
    "mypy",
]
test = [
    "fmt",
    "pytest {args}",
]
cov = [
    "fmt",
    "pytest --cov-report html {args}",
]
cov-check = [
    "python -c 'import webbrowser; webbrowser.open(\"http://0.0.0.0:3000\")'",
    "python -m http.server 3000 --directory ./htmlcov",
]
{% if cookiecutter.documentation_website|lower != "no" %}
docs = "mkdocs serve -a localhost:8001"
{% endif %}compile = "pip-compile -o requirements.txt pyproject.toml"


[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]


## TOOLS

[tool.hatch.version]
path = "src/{{cookiecutter.module_name}}/__init__.py"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
omit = ["tests/*"]


[tool.mypy]
files = ["src/"]
strict = true
implicit_reexport = true
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_any_generics = true


[tool.pytest.ini_options]
addopts = [
    "-vvv",          # Verbose level 3
    "--durations=10", # Show 10 slowest tests durations
    "--cov=src",
    "--color=yes",
    "--cov-report=term-missing",
    # "--cov-fail-under=85",
]
filterwarnings = [
    "ignore::DeprecationWarning:httpx.*:",
]


[tool.black]
color = true
line-length = 120
target-version = ['py38']
skip-string-normalization = false


# https://github.com/charliermarsh/ruff#supported-rules
[tool.ruff]
src = ["src", "tests"]
target-version = "py38"
line-length = 120
select = [
    "I",     # isort
    "N",     # pep8-naming
    "S",     # bandit
    "A",     # flake8-builtins
    "YTT",   # flake8-2020
    "B",     # flake8-bugbear
    "C",     # flake8-comprehensions
    "ICN",   # flake8-import-conventions
    "SIM",   # flake8-simplify
    "TID",   # flake8-tidy-imports
    "Q",     # flake8-quotes
    # "FBT",   # flake8-boolean-trap
    "F",     # pyflakes
    "UP",    # pyupgrade
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "PLC",   # pylint convention
    "PLE",   # pylint error
    # "PLR",   # pylint refactor Magic value used in comparison, consider replacing 400 with a constant variable
    "PLW",   # pylint warning
    "RUF",   # ruff specific
    "T",
]
ignore = [
    "E501", # line too long
    "C901", # too complex
    "T201", # do not use print
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["I", "F401"] # module imported but unused
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "S105", "TID252"]

[tool.ruff.mccabe]
max-complexity = 10

# If you need to import packages from git URLs
# [tool.hatch.metadata]
# allow-direct-references = true
# If you face issues with importing the modules in src/
# [tool.hatch.build]
# sources = ["src"]
